.work/must-gather-analysis/registry-build11-ci-openshift-org-ci-ln-vjb5l1t-stable-sha256-f89169f1cf6fd47be50038cc1c80be38e4fb997d7805094b3f6e50034f9c4c20/namespaces/openshift-operator-controller/networking.k8s.io/networkpolicies/operator-controller-default-deny-all-traffic.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: "2026-01-28T09:31:08Z"
  generation: 1
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:spec:
        f:policyTypes: {}
    manager: cluster-olm-operator
    operation: Update
    time: "2026-01-28T09:31:08Z"
  name: operator-controller-default-deny-all-traffic
  namespace: openshift-operator-controller
  resourceVersion: "8255"
  uid: b1684bb1-0760-41c8-a97e-7d7cf9e8bc4d
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
